--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="icon" href="./static/img/32.ico" type="img/x-ico">
     <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
     <link rel="stylesheet" href="http://cache.amap.com/lbs/static/AMap.DrivingRender1120.css"/>
     <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.7&key=2ceccd21ef8b2e7295d3072f3b704a2a&plugin=AMap.Driving"></script> 
     <script type="text/javascript" src="http://cache.amap.com/lbs/static/DrivingRender1230.js"></script>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <script type="text/javascript" src="http://cache.amap.com/lbs/static/addToolbar.js"></script>
     <!-- <base href="//webapi.amap.com/ui/1.0/ui/overlay/SimpleInfoWindow/examples/" /> -->
     <script src="//webapi.amap.com/ui/1.0/main.js?v=1.0.11"></script>
